packages/svelte/tests/validator/samples/snippet-shadowing-prop-implicit-children/input.svelte
<script>
	import Component from "./Component.svelte";
</script>

<Component children="">
	title
</Component>