packages/svelte/tests/compiler-errors/samples/component-slot-nested-error-2/main.svelte
<script>
  import Nested from './irrelevant';
</script>

<Nested>
  <div slot="slot1">
    <div>
      <div slot="slot2"></div>
    </div>
  </div>
</Nested>
